# genechat-mcp

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  claude_mcp_config.json.example  config.toml.example  flake.nix  pyproject.toml
.claude/skills/: SPEC.md  UPSTREAM-superpowers.md
.envrc.d/: setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/seed/: carrier_genes.tsv  enhanced_warning_genes.tsv  genes_grch38.tsv  pgx_drugs.tsv  pgx_variants.tsv  prs_weights.tsv  trait_variants.tsv
docs/: FIRST_RUN.md  annotation-updates.md  licenses.md  mcp-setup-comparison.md  multi-genome-plan.md  patch-architecture-plan.md  pip-install-plan.md  root-cause-dbsnp-omission.md  security.md
docs/architecture/: 0001-patch-architecture.md  0002-multi-genome-support.md  0003-pip-installable-package.md  0004-cli-guidelines-alignment.md  0005-genome-ux-redesign.md  0006-typer-cli-framework.md  0007-per-chromosome-dbsnp-download.md  0008-enhanced-warning-genes.md  0009-fast-annotation-mode.md  0010-parallel-annotation.md  README.md
docs/decisions/: 0001-patch-architecture.md  0002-multi-genome-support.md  0003-pip-installable-package.md  README.md
docs/plans/: cli-guidelines-alignment.md  fast-annotation-mode.md  genome-ux-redesign.md  parallel-annotation.md  per-chromosome-dbsnp.md  typer-migration.md
docs/specs/: MANIFEST.md
scripts/: annotate.sh  build_gwas_db.py  build_lookup_db.py  build_seed_data.py  fetch_cpic_data.py  fetch_gene_coords.py  fetch_prs_coords.py  fetch_prs_data.py  fetch_variant_coords.py  generate_test_vcf.py  lint-skills.sh  overnight_parity_test.py  setup_giab.py  setup_giab.sh  setup_references.sh  update_annotations.sh  update_clinvar.sh  update_dbsnp.sh  update_gnomad.sh  update_snpeff.sh
src/genechat/: SPEC.md  __init__.py  (+12 more)
tests/: conftest.py  test_cli.py  test_config.py  test_download.py  test_enhanced_warnings.py  test_gwas.py  test_lookup.py  test_packaging.py  test_parallel.py  test_parity.py  test_parsers.py  test_patch.py  test_progress.py  test_setup_giab.py  test_update.py  test_vcf_engine.py
(+71 files in other folders)
