[project]
name = "genechat-mcp"
version = "0.1.0"
description = "MCP server for conversational personal genomics"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "pysam>=0.22",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio", "ruff>=0.8"]

[project.scripts]
genechat = "genechat.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genechat"]

[tool.hatch.build.targets.wheel.shared-data]
"src/genechat/data" = "genechat/data"

[tool.pytest.ini_options]
asyncio_mode = "auto"
