[project]
name = "genechat-mcp"
version = "0.1.0"
description = "MCP server for conversational personal genomics"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Nate Costello"}]
keywords = ["genomics", "mcp", "vcf", "pharmacogenomics", "personal-genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "pysam>=0.22",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/natecostello/genechat-mcp"
Repository = "https://github.com/natecostello/genechat-mcp"
Issues = "https://github.com/natecostello/genechat-mcp/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio", "ruff>=0.8"]

[project.scripts]
genechat = "genechat.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genechat"]

[tool.hatch.build.targets.wheel.force-include]
"src/genechat/data/lookup_tables.db" = "genechat/data/lookup_tables.db"

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: Tests that scan the full VCF (stats, genome_summary, rsID queries)",
]
